--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_PORT=4000
 DB_USER=2eDquVxz1nvTBgq.root
 DB_PASSWORD=2XvUybagha8LW8s1
 DB_NAME=test
-CA_CERT_PATH=certs/isrgrootx1.pem
+CA_CERT_PATH=C:\Users\Admin\Downloads\DigiCertTLSECCP384RootG5.crt.pem
